[package]
name = "wisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
image = { version = "0.24.7", features = ["png"] }
pollster = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.18.0"
winit = { version = "0.29.4", features = ["rwh_05"] }

[[test]]
name = "wisp_tests"
path = "tests/main.rs"
harness = false
